# ComputerVisionTemplate

./: .gitignore  CMakeLists.txt  README.md
